Changed README in master

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a sample repository Adding new line
+This is a sample repository Adding new lin
 This line won't be added
 \n One more line\n
 This line would be added
