--- a/README
+++ b/README
@@ -2,3 +2,4 @@ This is a sample repository Adding new lin
 This line won't be added
 \n One more line\n
 This line would be added
+new line from Sudip
